--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ section {
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: #ceff00;
+    background-color: #52170b;
     font-family: 'Poppins', sans-serif;
 }
 
